# summary-rs

./: Cargo.toml  README.md
.cargo/: config.toml
benches/: shakespeare.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: summarize_ratio.rs  summarize_sentences.rs
src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
