[package]
name = "summary"
version = "0.1.0"
authors = ["Ryan Avella"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/ryanavella/summary-rs"
repository = "https://github.com/ryanavella/summary-rs"
documentation = "https://docs.rs/summary"
description = "Extract the sentences which best summarize a document."
keywords = ["summary", "summarize", "summarizer"]
categories = ["text-processing", "algorithms", "compression"]
edition = "2021"
readme = "README.md"

[dependencies]
rust-stemmers = "1.2.0"
stop-words = "0.8.0"
unicode-segmentation = "1.11.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "shakespeare"
harness = false
